clusters/talos-cluster/tyche/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tyche
  namespace: tyche
spec:
  selector:
    app: tyche
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
